refactor(nodes): 弃用特定几何类型烘焙节点并实现自动迁移
- 为 Box、Cone、Cylinder、Ellipsoid、Octahedron、Prism、Sphere、Tetrahedron、Torus 几何烘焙节点添加 @Deprecated 注解
- 在 GraphSerializer 中实现弃用烘焙节点的自动迁移功能，将旧节点类型映射到通用 bake_geometry_to_blocks 节点
- 添加 MigrationReport 记录迁移过程中的节点数量、类型ID和注意事项
- 在节点库组件中隐藏已弃用的节点，默认不显示在搜索结果中
- 更新文档中标记弃用节点的说明，指向新的通用几何烘焙节点
- 添加详细的弃用计划文档 docs/bake-node-deprecation-plan.md
- 实现图形界面加载时的自动迁移提示和警告信息